@@ -3362,10 +3362,11 @@ B++){var C=E[B];
 if(C.value!=D.value||C.selectOthers!=D.selectOthers){A.push(C);
 }}return A;
 };
-Exhibit.HierarchicalFacet.prototype.update=function(A){this._dom.valuesContainer.style.display="none";
+Exhibit.HierarchicalFacet.prototype.update=function(B){this._dom.valuesContainer.style.display="none";
 this._dom.valuesContainer.innerHTML="";
-this._constructBody(this._computeFacet(A));
-this._dom.valuesContainer.style.display="block";
+var A=this._computeFacet(B);
+if(A){this._constructBody(A);
+}this._dom.valuesContainer.style.display="block";
 };
 Exhibit.HierarchicalFacet.prototype._computeFacet=function(F){this._buildCache();
 var G=this._uiContext.getDatabase();
